Added responsive fixes and contact phone info.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav id="desktop-nav">
-        <div class="logo">Charan Kumar Selvam</div>
+        <div class="logo"><h1 class="title">CKS</h1></div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -428,6 +428,10 @@
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
                 <p><a href="https://www.linkedin.com/in/charan2598/">LinkedIn</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/phone.png" alt="Phone icon" class="icon contact-icon" />
+                <p>+1-778-954-9081</p>
             </div>
         </div>
     </section>
