Added Cavallo experience to experiences section.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <body>
     <nav id="desktop-nav">
-        <div class="logo"><h1 class="title">CKS</h1></div>
+        <div class="logo">
+            <h1 class="title">CKS</h1>
+        </div>
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
@@ -23,7 +25,9 @@
         </div>
     </nav>
     <nav id="hamburger-nav">
-        <div class="logo">Charan Kumar Selvam</div>
+        <div class="logo">
+            <h1 class="title">CKS</h1>
+        </div>
         <div class="hamburger-menu">
             <div class="hamburger-icon" onclick="toggleMenu()">
                 <span></span>
@@ -104,6 +108,45 @@
         <h1 class="title">Experience</h1>
         <div class="experience-details-container">
             <div class="experience-containers">
+                <!-- Cavallo Experience -->
+                <div class="experience-card">
+                    <div class="experience-card__header">
+                        <div class="experience-card__header__logo-container">
+                            <div class="experience-card__header__logo-container__logo">
+                                <a href="https://cavallotechnologies.ca/" target="_blank"><img
+                                        src="./assets/cavallo.png" alt="Cavallo Technologies" /></a>
+                            </div>
+                            <div class="experience-card__header__logo-container__name">
+                                Cavallo Technologies
+                            </div>
+                        </div>
+                        <div class="experience-card__header__designation">
+                            Software Engineer Intern (Backend Developer)
+                        </div>
+                    </div>
+                    <div class="experience-card__body"></div>
+                    <div class="experience-card__body__description">
+                        <div class="experience-card__body__description__pointer">
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                        </div>
+                        <div class="experience-card__body__description__content">
+                            Developing APIs using C# for banking solutions for the Client Coastal Community Bank, with
+                            continuous integration and deployment on Azure cloud along with CosmosDB. Developed code to
+                            deploy Azure Resources using Bicep files. Also, debug and resolve CI/CD Azure pipeline
+                            issues.
+                        </div>
+                    </div>
+                    <div class="experience-card__body__description">
+                        <div class="experience-card__body__description__pointer">
+                            <img src="./assets/tools.png" alt="Tools icon" class="icon" />
+                        </div>
+                        <div class="experience-card__body__description__content">
+                            Tools used: C#, Microsoft Azure, CosmosDB, Azure Bicep.</div>
+                    </div>
+                    <div class="experience-card__footer">
+                        <div>May 2024 - Present | Burnaby, Canada</div>
+                    </div>
+                </div>
                 <!-- Hypothetic Experience -->
                 <div class="experience-card">
                     <div class="experience-card__header">
@@ -165,7 +208,8 @@
                             <img src="./assets/tools.png" alt="Tools icon" class="icon" />
                         </div>
                         <div class="experience-card__body__description__content">
-                            Tools used: Python, Pytorch, Pytorch3D, Kaolin, Numpy, Scipy, ONNX, ONNXRunTime, AWS, FastAPI, PointNets, WanDB.</div>
+                            Tools used: Python, Pytorch, Pytorch3D, Kaolin, Numpy, Scipy, ONNX, ONNXRunTime, AWS,
+                            FastAPI, PointNets, WanDB.</div>
                     </div>
                     <div class="experience-card__footer">
                         <div>May 2023 - Jan 2024 | Vancouver, Canada</div>
@@ -246,7 +290,8 @@
                             <img src="./assets/tools.png" alt="Tools icon" class="icon" />
                         </div>
                         <div class="experience-card__body__description__content">
-                            Tools used: C, C++, Python, Wireshark, GDB, Azure, InfluxDBv2, Grafana, Make, Bash Shell.</div>
+                            Tools used: C, C++, Python, Wireshark, GDB, Azure, InfluxDBv2, Grafana, Make, Bash Shell.
+                        </div>
                     </div>
                     <div class="experience-card__footer">
                         <div>Aug 2019 - Aug 2022 | Bengaluru, India</div>
