--- a/index.html
+++ b/index.html
@@ -138,10 +138,19 @@
                     </div>
                     <div class="experience-card__body__description">
                         <div class="experience-card__body__description__pointer">
+                            <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+                        </div>
+                        <div class="experience-card__body__description__content">
+                            Utilized Postman and Newman for API testing, including automation of test scripts, validation
+                            of responses, and prior to integration with CI/CD pipelines.
+                        </div>
+                    </div>
+                    <div class="experience-card__body__description">
+                        <div class="experience-card__body__description__pointer">
                             <img src="./assets/tools.png" alt="Tools icon" class="icon" />
                         </div>
                         <div class="experience-card__body__description__content">
-                            Tools used: C#, Microsoft Azure, CosmosDB, Azure Bicep.</div>
+                            Tools used: C#, Microsoft Azure, CosmosDB, Azure Bicep, Postman, NewmanCLI.</div>
                     </div>
                     <div class="experience-card__footer">
                         <div>May 2024 - Present | Burnaby, Canada</div>
