Minor change in description for Cavallo Experience

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
                             <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                         </div>
                         <div class="experience-card__body__description__content">
-                            Utilized Postman and Newman for API testing, including automation of test scripts, validation
-                            of responses, and prior to integration with CI/CD pipelines.
+                            Leveraged Postman scripts and Newman for API testing automation, and prior to integration with CI/CD pipelines.
                         </div>
                     </div>
                     <div class="experience-card__body__description">
